--- a/HTML.html
+++ b/HTML.html
@@ -30,8 +30,8 @@
 <body>
     <h1>Hello world!</h1>
     <p style="font-size:30px;">Welcome to my homepage!</p>
-    <p><a href="https://twitch.tv/crimer_twitch" target="_blank" title="twitch.tv/Crimer_Twitch" style="text-align:center;">Twitch_Crimer</a></p>
-    <p><a href="https://www.youtube.com/channel/UCJ1C7YQXuP6ECIUGu3MmCJA?view_as=subscriber" target="_blank" title="Crimer YouTube" ><button>Crimer YouTube</button></a></p>
+    <p><a href="https://www.twitch.tv/crimer_twitch" target="_blank" title="Crimer Twitch" ><button>Crimer Twitch</button></a>
+    <a href="https://www.youtube.com/channel/UCJ1C7YQXuP6ECIUGu3MmCJA?view_as=subscriber" target="_blank" title="Crimer YouTube" ><button>Crimer YouTube</button></a></p>
     <p><a href="index.html" class="saw">WEB</a></p>
     <p><a href="HTML.html" style="color:red;text-decoration:underline" >HTML</a></p>
     <p><a href="CSS.html" >CSS</a></p>
